FreedomSanboxAntDeploy/src/objects/Portfolio_Report__c.object
<CustomObject>
    <fields>
        <fullName>Absolute_Ret__c</fullName>
        <label>Absolute Ret</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Allocated_Amount__c</fullName>
        <label>Allocated Amount</label>
        <summarizedField>GoalIAULIPAssociation__c.Allocation__c</summarizedField>
        <summaryForeignKey>GoalIAULIPAssociation__c.Portfolio_Report__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Annualized_Ret__c</fullName>
        <label>Annualized Ret</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <picklist>
            <picklistValues>
                <fullName>Debt: Floating Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Liquid Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Medium Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Debt: Ultra Short Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity: Tax Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid: Monthly Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ULIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid: Equity Oriented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity : Shares</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity: Diversified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Average_Days__c</fullName>
        <label>Average Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Categories__c</fullName>
        <formula>CASE( Asset_Class__c ,
&quot;Debt: Floating Rate&quot;, &quot;Debt&quot;,
&quot;Debt: Liquid Plus&quot;, &quot;Debt&quot;,
&quot;Debt: Medium Term&quot;, &quot;Debt&quot;, 
&quot;Debt: Short Term&quot;, &quot;Debt&quot;, 
&quot;Debt: Ultra Short Term&quot;, &quot;Debt&quot;, 
&quot;Equity: Tax Planning&quot;, &quot;Equity&quot;,
&quot;Hybrid: Monthly Income&quot;, &quot;Debt&quot;,
&quot;ULIP&quot;, &quot;Equity&quot;,
&quot;Hybrid: Equity Oriented&quot;, &quot;Equity&quot;,
&quot;Equity : Shares&quot;, &quot;Equity&quot;,
&quot;Equity: Diversified&quot;, &quot;Equity&quot;,
&quot;None&quot;)</formula>
        <label>Categories</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Price__c</fullName>
        <label>Current Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Value__c</fullName>
        <label>Current Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Div_RS__c</fullName>
        <label>Div.(RS)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dividend_Reinvested__c</fullName>
        <label>Dividend Reinvested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dividend_Reivestment__c</fullName>
        <label>Dividend Reivestment</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dividend__c</fullName>
        <label>Dividend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Portfolio Report</relationshipLabel>
        <relationshipName>Portfolio_Report</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Folio_Number__c</fullName>
        <label>Folio Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Gain__c</fullName>
        <label>Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Nav_p__c</fullName>
        <label>Nav</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <label>Old Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portfolio_Type__c</fullName>
        <label>Portfolio Type</label>
        <picklist>
            <picklistValues>
                <fullName>EQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gi</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Average_Days__c * Purchase_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Amount__c</fullName>
        <label>Purchase Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Redeemed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Redeemed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STP_Switch__c</fullName>
        <label>STP/ Switch</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Schema_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Schema Name</label>
        <referenceTo>Product_Master__c</referenceTo>
        <relationshipLabel>Portfolio Report</relationshipLabel>
        <relationshipName>Portfolio_Report</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scheme_Scrip_Name_Internal__c</fullName>
        <label>Scheme/Scrip Name(Internal)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scheme_Scrip_Name__c</fullName>
        <label>Scheme/Scrip Name</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TBD_Product__c</fullName>
        <label>Product</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>NOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>STI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UniqueName__c</fullName>
        <externalId>true</externalId>
        <label>UniqueName</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Units_Quanitity__c</fullName>
        <label>Units/Quanitity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Gain__c</fullName>
        <label>% of Gain</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <label>Portfolio Report</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Portfolio Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolio Report</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>